--- a/projetosocial.html
+++ b/projetosocial.html
@@ -9,6 +9,7 @@
 <body>
 
     <header>
+        <!--Cabeçalho com título e navegação-->
         <h1>Amigos da Onça</h1>
         <nav>
             <a href="index.html">Página Inicial</a>
