--- a/projetosocial.html
+++ b/projetosocial.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos sociais</title>
+    <!-- Ícone da página -->
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
     <body>
