--- a/cadastro.html
+++ b/cadastro.html
@@ -22,6 +22,8 @@
             <!--Formulário de Cadastro-->
             <h2 id="cadastro">Faça parte da nossa causa</h2>
 
+            <img src="imagens/oncabanner-600.webp" alt="Onça em vigia na floresta">
+
             <form>
                 <fieldset>
                     <legend>Cadastro</legend>
